--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -98,7 +98,7 @@
     }
 
   body, input, select, textarea {
-    color: #910317;
+    color: #f8f2bf;
     font-family: "Merriweather", sans-serif;
     font-weight: bold;
     font-size: 1rem;
@@ -586,7 +586,7 @@
       -webkit-pointer-events: none;
       -ms-pointer-events: none;
       pointer-events: none;
-      background-image: url("../../images/overlay.png");
+      background-image: url("../images/overlay.png");
       background-color: #03092F;
       border-radius: 4px;
       content: '';
@@ -1053,7 +1053,7 @@
       -webkit-transition-delay: 0.75s;
       -ms-transition-delay: 0.75s;
       transition-delay: 0.75s;
-      background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
+      background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../images/overlay.png");
       background-size: auto, 256px 256px;
       background-position: center, center;
       background-repeat: no-repeat, repeat;
@@ -1069,7 +1069,7 @@
       -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
       -ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
       transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-      background-image: url("../../images/bg.jpg");
+      background-image: url("../images/bg.jpg");
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
